# aether

./: .clang-format  .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  STATUS.md  TEST_RESULTS.md  aether.toml.example  aether_ast.c  aetherc.c  aetherc.exe.stackdump  build.ps1  build.sh  build_compiler.ps1  commit_message.txt  gmon.out  install.sh  next_steps.md  profile_results.csv  t.ae  t.c  test.sh  test_all_examples.ps1  test_debug.ae  test_debug.c  valgrind-output.txt
.github/: FUNDING.yml
asm/: syscalls.s
benchmarks/: README.md
benchmarks/cross-language/rust/: .gitignore  Cargo.toml
benchmarks/cross-language/rust/src/: counting.rs  fork_join.rs  main.rs  ping_pong.rs  ring.rs  skynet.rs  thread_ring.rs
compiler/: aether_diagnostics.c  aether_error.c  aether_error.h  aether_module.c  aether_module.h  aetherc.c  ast.c  ast.h  codegen.c  codegen.h  lexer.c  lexer.h  parser.c  parser.h  tokens.h  type_inference.c  type_inference.h  typechecker.c
docker/: Dockerfile  Dockerfile.ci  Dockerfile.dev  Dockerfile.embedded  Dockerfile.wasm  Dockerfile.wine  README.md  docker-compose.yml
docs/: ACTORS_COMPLETE.md  CONCURRENCY_EXPERIMENTS.md  DOCUMENTATION_STRUCTURE.md  EXTREME_OPTIMIZATIONS.md  IMPLEMENTATION_PLAN.md  PARSER_INFINITE_LOOP_FIXES.md  PROJECT_STATUS.md  README.md  ROADMAP.md  RUNTIME_CONFIG.md  RUNTIME_GUIDE.md  TYPE_INFERENCE_GUIDE.md  actor-concurrency.md  actor-implementation-status.md  actor-optimizations.md  architecture.md  bottleneck-analysis.md  (+28 more)
(+648 files in other folders)
